// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when empty 1`] = `
<div
  className="container"
>
  <hr />
  <p>
    
  </p>
  <ul
    className="search-results list-group"
  />
</div>
`;

exports[`renders correctly with results 1`] = `
<div
  className="container"
>
  <hr />
  <p>
    Mostrando 2 resultados
  </p>
  <ul
    className="search-results list-group"
  >
    <button
      className="list-group-item-action list-group-item"
      onClick={[Function]}
    >
      <h5
        className="list-group-item-heading"
      >
        Movie 1
      </h5>
      <p
        className="list-group-item-text"
      >
        The best movie ever
      </p>
    </button>
    <button
      className="list-group-item-action list-group-item"
      onClick={[Function]}
    >
      <h5
        className="list-group-item-heading"
      >
        Movie 2
      </h5>
      <p
        className="list-group-item-text"
      >
        Much better than Movie 1
      </p>
    </button>
  </ul>
</div>
`;
